--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -2,7 +2,9 @@
   padding: 10px 15px;
   background: var(--tg-theme-button-color);
   color: var(--tg-theme-button-text-color);
-  border: none;
+  /* border: none; */
+  border: 1px solid red;
+  border-radius: 8px;
   outline: none;
   cursor: pointer;
 }
