--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,14 +1,15 @@
 .button {
-  padding: 5px 5px;
+  width: 30px;
+  height: 30px;
   background: var(--tg-theme-button-color);
-  /* background: #da6bb4; */
   color: var(--tg-theme-button-text-color);
   border: none;
+  /* border: 1px solid red; */
   border-radius: 50%;
   outline: none;
   cursor: pointer;
 }
 
-.button:hover {
+/* .button:hover {
   background: #da6bb4;
-}
+} */
