--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,11 +1,8 @@
 .button {
-  width: 30px;
-  height: 30px;
+  padding: 10px 15px;
   background: var(--tg-theme-button-color);
   color: var(--tg-theme-button-text-color);
   border: none;
-  /* border: 1px solid red; */
-  border-radius: 50%;
   outline: none;
   cursor: pointer;
 }
