--- a/src/components/ProductList/ProductList.css
+++ b/src/components/ProductList/ProductList.css
@@ -2,9 +2,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  gap: 8px;
 }
 
 .item {
   margin-right: 10px;
   margin-bottom: 10px;
+  border: 1px solid #000;
 }
