--- a/src/components/ProductList/ProductList.css
+++ b/src/components/ProductList/ProductList.css
@@ -6,7 +6,7 @@
 }
 
 .item {
-  margin-right: 10px;
-  margin-bottom: 10px;
+  /* margin-right: 10px; */
+  /* margin-bottom: 10px; */
   border: 1px solid #000;
 }
